feat: add 'hobby' font type

--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -26,5 +26,5 @@ const { title } = Astro.props;
 
 <style is:global>
   /* Register custom font families from Google Fonts */
-  @import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Fira+Code&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap");
 </style>
